# coletor-imagem-radar

./: .dockerignore  .gitignore  CHANGELOG.md  CLAUDE.md  Cargo.toml  Containerfile  Containerfile.catalogo  Containerfile.coletor-c13  Containerfile.coletor-glm  README.md  build.rs  compose.yaml  config.example.toml
.github/workflows/: build-container.yml  rust.yml
crates/catalogo/: Cargo.toml
crates/catalogo/proto/: catalogo.proto
crates/catalogo/src/: main.rs  serve.rs
crates/coletor-c13/: Cargo.toml
crates/coletor-c13/assets/: c13_noaa.txt
crates/coletor-c13/src/: main.rs  process.rs
crates/coletor-glm/: Cargo.toml
crates/coletor-glm/src/: glm.rs  main.rs
crates/comum/: Cargo.toml
crates/comum/src/: config.rs  lib.rs  logging.rs  pipeline.rs  query.rs  raio.rs  state.rs
crates/visor-raios/: Cargo.toml  build.rs  index.html
crates/visor-raios/src/: grpc.rs  main.rs
proto/: catalogo.proto
src/: config.rs  entity.rs  grpc.rs  main.rs  nodd.rs  pipeline.rs  query.rs  serve.rs  state.rs  storage.rs
