[package]
name = "coletor-imagem-radar"
version = "0.1.0"
edition = "2024"

[dependencies]
anyhow = "1.0.102"
bytes = "1.11.1"
clap = { version = "4.6.1", features = ["derive"] }
futures = "0.3.32"
object_store = { version = "0.13.2", features = ["aws"] }
redb = "4.1.0"
sea-orm = { version = "1.1.20", features = ["sqlx-postgres", "runtime-tokio-rustls", "macros", "with-time"] }
serde = { version = "1.0.228", features = ["derive"] }
time = { version = "0.3.47", features = ["macros"] }
tokio = { version = "1.52.3", features = ["rt-multi-thread", "macros", "signal", "process", "fs", "io-util", "time"] }
toml = "1.1.2"
tracing = "0.1.44"
tracing-subscriber = { version = "0.3.23", features = ["env-filter", "json"] }
