# Workspace do Coletor de Imagem de Radar (GOES-19 → catálogo).
#
# 3 binários + 1 lib compartilhada (`comum`), para que cada imagem de container
# carregue só suas dependências de sistema:
#   - coletor-c13: GDAL + pmtiles (raster → PMTiles no S3)
#   - coletor-glm: libnetcdf       (pontos de raio → Postgres)
#   - catalogo:    nada extra      (servidor gRPC de consulta)
[workspace]
resolver = "3"
members = ["crates/comum", "crates/coletor-c13", "crates/coletor-glm", "crates/catalogo", "crates/visor-raios"]

[workspace.package]
version = "0.3.0"
edition = "2024"

# Versões pinadas e compartilhadas pelos crates (política: versão testada localmente).
[workspace.dependencies]
anyhow = "1.0.102"
# Servidor HTTP do visor-raios (serve o mapa + /raios.geojson).
axum = "0.8.6"
bytes = "1.11.1"
clap = { version = "4.6.1", features = ["derive"] }
futures = "0.3.32"
http = "1.4.1"
object_store = { version = "0.13.2", features = ["aws"] }
prost = "0.14.3"
prost-types = "0.14.3"
redb = "4.1.0"
sea-orm = { version = "1.1.20", features = ["sqlx-postgres", "runtime-tokio-rustls", "macros", "with-time"] }
serde = { version = "1.0.228", features = ["derive"] }
time = { version = "0.3.47", features = ["macros"] }
tokio = { version = "1.52.3", features = ["rt-multi-thread", "macros", "signal", "process", "fs", "io-util", "time"] }
toml = "1.1.2"
tonic = "0.14.6"
tonic-prost = "0.14.6"
tracing = "0.1.44"
tracing-subscriber = { version = "0.3.23", features = ["env-filter", "json"] }
tonic-prost-build = "0.14.6"
# Leitura de NetCDF (só o coletor-glm). Linka a libnetcdf do sistema (dynlib).
netcdf = "0.12.0"
comum = { path = "crates/comum" }
